<resources>
    <string name="app_name">Star Health</string>
    <string name="second_page">This is my second Activity</string>
    <string name="toast_msg">Welcome To Water Camp</string>
    <string name="enter_Email">Enter Email ID</string>
    <string name="title_activity_dashboard">Star Health1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_call">Call</string>
    <string name="action_log_out">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="map">Hospital List</string>
    <string name="menu_call">Instant Renewal</string>
    <string name="menu_aboutUS">Join Us</string>

    <string name="menu_send">News</string>
    <string name="action_cart">Cart</string>

    <string name="action_order">Moter Insurance</string>
    <string name="action_wishlist">Travel Insurance</string>
    <string name="action_account">Personal Accident</string>
    <string name="star_policy">Star Yong\n  Policy</string>
    <string name="family_optima">New Family\n Optima</string>
    <string name="arogya_sanjeevani">  Arogya\nSanjeevani</string>
    <string name="star">Comprehesive\nInsurance</string>

</resources>
